--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 ---
 layout: redirected
 sitemap: false
-redirect_to: https://dentime.anozon.me
+redirect_to: https://3664-5-181-235-201.ngrok.io/
 ---
